--- a/css/exhibitors.css
+++ b/css/exhibitors.css
@@ -269,10 +269,10 @@
 
 /* 事件標題 */
 .event-title {
-  font-family: "IBM Plex Serif", serif;
+  font-family: "IBM Plex Sans JP", sans-serif;
   font-size: 1rem;
   color: #000;
-  margin-bottom: 0.5rem;
+  margin-top: 1rem;
   line-height: 1.2;
   color: #50006f;
   order: 2; /* 確保標題在下面 */
