--- a/style.css
+++ b/style.css
@@ -788,9 +788,9 @@ p {
 }
 
 .agenda-subscribe a {
-  color: var(--accent);
+  color: plum;
   text-decoration: none;
-  transition: color 0.3s ease;
+  background-color: yellow;
 }
 
 .agenda-subscribe a:hover {
@@ -1840,6 +1840,7 @@ p {
   align-items: center;
   gap: 1rem;
   width: 100%;
+  margin-right: 10px;
 }
 
 .exhibitor-display-container {
