--- a/style.css
+++ b/style.css
@@ -904,15 +904,14 @@ p {
   display: flex;
   align-items: flex-start;
   gap: 2rem;
-  padding-left: 200px; /* 為左側zine留出空間 */
+  padding-left: 200px; 
+  flex-direction: column;
 }
 
 /* L 型 Zine 布局容器樣式 */
 .timeline-left-zine-container {
   position: absolute;
   left: 16px;
-  top: 50%;
-  transform: translateY(-50%);
   display: flex;
   flex-direction: column;
   gap: 5px;
